update template fix some layout issues

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,7 +16,7 @@
     .tab-content {
         min-height: 536px;
     }
-    
+
     .CodeMirror {
         height: 400px;
     }
@@ -41,5 +41,11 @@
 .main-preview-code-container {
     .CodeMirror {
         height: 500px;
+    }
+}
+
+@include media-breakpoint-between(md, xl) {
+    .bigger-preview {
+        width: 110%;
     }
 }
